// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User: Component should render correctly 1`] = `
<Switch>
  <Route
    component={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "displayName": "Connect(withRouter(List))",
        "type": [Function],
      }
    }
    exact={true}
    path="/user"
  />
  <Route
    exact={true}
    path="/user/:userId/add/:projectId"
    render={[Function]}
  />
  <Route
    exact={true}
    path="/user/add"
    render={[Function]}
  />
  <Redirect
    exact={true}
    path="/user/me"
    to="/settings"
  />
  <Route
    component={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "displayName": "Connect(withRouter(View))",
        "type": [Function],
      }
    }
    exact={true}
    path="/user/:userId"
  />
</Switch>
`;

exports[`User: Component should render correctly with project id 1`] = `
<Switch>
  <Route
    component={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "displayName": "Connect(withRouter(List))",
        "type": [Function],
      }
    }
    exact={true}
    path="/user/1/add"
  />
  <Route
    exact={true}
    path="/user/1/add/:userId/add/:projectId"
    render={[Function]}
  />
  <Route
    exact={true}
    path="/user/1/add/add"
    render={[Function]}
  />
  <Redirect
    exact={true}
    path="/user/1/add/me"
    to="/settings"
  />
  <Route
    component={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "displayName": "Connect(withRouter(View))",
        "type": [Function],
      }
    }
    exact={true}
    path="/user/1/add/:userId"
  />
</Switch>
`;
